# Alita-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEEP_DIVE_ANALYSIS.md  LICENSE  README.md  alita_local.py  plan.md  requirements.txt  run_proxy.py  setup.sh
alita/alita_agent_prototype/: install.py  requirements.txt
alita_agent_prototype/: .env.example  README.md  demo_working.py  install.py  pyproject.toml  requirements.txt
alita_agent_prototype/alita_agent/: __init__.py  cli.py  exceptions.py
alita_agent_prototype/alita_agent/config/: prompts.py  settings.py
alita_agent_prototype/alita_agent/core/: manager_agent.py  mcp_system.py  memory.py  planning.py  tool_registry.py  web_agent.py
alita_agent_prototype/alita_agent/tools/: __init__.py  run_tests_tool.py
alita_agent_prototype/alita_agent/utils/: helpers.py  llm_client.py  logging.py  security.py
alita_agent_prototype/examples/: advanced_demo.py  alita_sdk_demo.py  basic_usage.py  gui_chat.py
alita_agent_prototype/tests/: __init__.py  test_cli.py  test_config.py  test_llm_client_errors.py  test_llm_client_gemini_integration.py  test_manager_agent.py  test_mcp_system.py  test_memory.py  test_memory_system.py  test_planner.py  test_planning.py  test_run_tests_tool.py  test_security.py  test_web_agent.py
cortex-extension/: package-lock.json  package.json  tsconfig.json
cortex-extension/src/: extension.ts
cortex-extension/src/commands/: automation.ts
cortex/api/endpoints/: automation.py
cortex/automation/: deployment.py  git_workflow.py  python_tests.py  typescript_tests.py
cortex/common/: logging.py
cortex/proxy/: copilot_middleware.py
cortex/tools/: formatters.py  testing.py
docs/: alita_sdk.md  architecture.md  examples.md  getting_started.md  overview.md
