[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alita-agent"
version = "0.1.0"
description = "A self-evolving AI agent framework for autonomous tool creation."
authors = [{name = "ShredMasterFlex", email = "flex@example.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
