[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "alita-agent"
version = "0.1.0"
description = "A self-evolving AI agent framework for autonomous tool creation."
authors = [{name = "ShredMasterFlex", email = "flex@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "alita-sdk>=0.3.0",
]
